fix overflow background

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -175,4 +175,5 @@ p {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow-x: hidden;
 }
