--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -198,6 +198,7 @@ p {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow-x: hidden;
 }
 
 .header {
